--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,29 @@
 {
   "theme_color": "#f69435",
   "background_color": "#ce965f",
-  "display": "standalone",
+  "display": "fullscreen",
   "scope": "/pwa-music/",
   "start_url": "/pwa-music/",
-  "name": "pwa-music",
+  "name": "My Music App",
   "short_name": "pwaMusic",
   "icons": [
     {
-      "src": "icon-192x192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-256x256.png",
+      "src": "./icons/icon-256x256.png",
       "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "icon-384x384.png",
+      "src": "./icons/icon-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "icon-512x512.png",
+      "src": "./icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
